fixing overlapping grouped metrics

--- a/resources/sass/card.scss
+++ b/resources/sass/card.scss
@@ -29,6 +29,14 @@
     .card {
         min-height: 150px;
     }
+
+    &.card-panel {
+        height: unset;
+    }
+
+    @media (max-width: 992px) {
+        margin-bottom: -2rem;
+    }
 }
 
 .advanced-trend-card {
